# simple-rust-fw-blink

./: Cargo.toml  Makefile  README.md  build.rs  jlink.gdb  memory.nrf.x  memory.nrf_rt.x  memory.stm32.x  memory.stm32_rt.x  memory.x  openocd.gdb
.cargo/: config
config/openocd/: openocd.cfg  openocd_stlinkv2.cfg
includes/fsm/: Cargo.toml
includes/fsm/src/: lib.rs
includes/nrf/: Cargo.toml  build.rs  nRF5-sdk
includes/nrf/shims/: sdk_config.h  shim.c  shim.h
includes/nrf/src/: lib.rs
includes/semihosting/: Cargo.toml
includes/semihosting/src/: lib.rs
includes/simcom/: Cargo.toml
includes/simcom/src/: lib.rs  serial.rs  simcom.rs
includes/uarte/: Cargo.toml
includes/uarte/src/: lib.rs  uart.rs
src/: board.rs  main.rs
src/board/: led.rs  mod.rs
src/board/nrf/: mod.rs  nrf.rs
src/board/stm32/: stm32.rs
src/board/stm32_bluepill/: stm32.rs
src/hal/: mod.rs
