[package]
name = "fw"
version = "0.0.1"
authors = ["Dmitry Gorohov <dmitry.gorohov@gmail.com>"]
edition = "2018"

[dependencies]
nb = "0.1.2"

[dependencies.semihosting]
path = "includes/semihosting"
default-features = false
features = [ "semihosting" ]

[dependencies.cortex-m-rt]
version  = "0.6.11"
optional = true

[dependencies.cortex-m]
version  = ">= 0.5.10, < 0.7"
default-features = false
features = [ "const-fn", "inline-asm" ]

[dependencies.embedded-hal]
version="0.2.3"
default-features = false
features = [ "unproven" ]

[dependencies.stm32f1xx-hal]
version = "0.5.2"
optional = true
default-features = false
features = [ "stm32f103", "rt" ]

[dependencies.stm32f1]
version = "0.9.0"
optional = true
default-features = false
features = [ "stm32f103", "rt" ]

[dependencies.nrf52840-hal]
version="0.8.1"
optional = true
default-features = false
features = [ "rt" ]

[dependencies.nrf52840-pac]
version="0.8.0"
optional = true
default-features = false
features = [ "rt" ]

[dependencies.nrf52-hal-common]
version="0.8.1"
optional = true
default-features = false
features = [ "52840" ]

[profile.release]
lto = true
debug = false

[features]
default  = [ "rt", "stm32_rt" ]
rt = [ "stm32_rt" ]
nrf_rt   = [ "nrf52840-hal/rt", "cortex-m-rt", "nrf52-hal-common", "nrf52840-pac" ]
stm32_rt = [ "stm32f1xx-hal/rt", "cortex-m-rt", "stm32f1" ]

[workspace]
members = [
    "includes/semihosting",
]
