[package]
name = "uarte"
version = "0.1.0"
authors = ["Dmitry Gorohov <dmitry.gorohov@gmail.com>"]
edition = "2018"

[dependencies.nrf52840-hal]
version="0.8.1"
default-features = false
features = [ "rt" ]

[dependencies.nrf52840-pac]
version="0.8.0"
default-features = false
features = [ "rt" ]

[dependencies.nrf52-hal-common]
version="0.8.1"
default-features = false
features = [ "52840" ]
